# wsi-preprocessing-sos-workflow

./: .gitignore  README.md  project.TEMPLATE.yml  pyproject.toml  remote.sos  requirements.txt
